# training-raster-clipper

./: .gitignore  .pylintrc  README.md  TUTORIAL.md  launch.sh  o]  pyproject.toml
notebooks/: __eschalk.ipynb  __eschalk_minimal.ipynb  abdellah.ipynb  blank.ipynb  classified_rgb_rows.csv  emunaibari.ipynb  eschalk.ipynb  iatraoui.ipynb  rskandrani.ipynb  tdiouf.ipynb
resources/: polygons.geojson  polygons_new - Copie.json  project_qgis.qgz  qgis_example.qgz  test.dbf  test.shp  test.shx
resources/diagrams/: training-raster-clipper.drawio
resources/nbertaud/: classified_points.csv  polygons.geojson  sklearn_raster_test.tiff
resources/qgis/: ombre.qgz  project_qgis.qgz  qgis_example.qgz
resources/solution/: polygons.geojson
resources/solution/example_sentinel_files/SENTINEL.SAFE/: original_folder_name.txt
resources/solution/example_sentinel_files/SENTINEL.SAFE/GRANULE/L2A_T31TCJ_A038658_20221116T105603/IMG_DATA/R60m/: T31TCJ_20221116T105321_B02_60m.jp2  T31TCJ_20221116T105321_B03_60m.jp2  T31TCJ_20221116T105321_B04_60m.jp2  T31TCJ_20221116T105321_B8A_60m.jp2  T31TCJ_20221116T105321_TCI_60m.jp2
resources/your_work/: Polygons_emunaibari.geojson
scripts/: clean_python_code.sh  launch_eschalk.sh  launch_template.sh
src/: main.py
src/training_raster_clipper/: custom_types.py  main.py
src/training_raster_clipper/core/: application.py  logging.py  models.py  visualization.py
src/training_raster_clipper/implementation/: eschalk.py  iatraoui.py  nbertaud.py  rskandrani.py  solutions.py  your_work.py
training_raster_clipper/: main.py  tutorial.py
training_raster_clipper/custom_types/: custom_types.py
training_raster_clipper/implementation/: solutions.py  your_work.py
