[tool.poetry]
name = "training-raster-clipper"
version = "0.1.0"
description = "Intersect rasters with classified polygons"
authors = ["eschalk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
geopandas = "^0.12.1"
rasterio = "^1.3.4"
rioxarray = "^0.13.1"
xarray = "^2022.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
