[tool.poetry]
name = "training-raster-clipper"
version = "0.1.0"
description = "Intersects rasters with classified polygons"
authors = ["Etienne Schalk <eschalk@argans.eu>"]
readme = "README.md"
packages = [{ include = "training_raster_clipper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
geopandas = "^0.12.1"
rasterio = "^1.3.4"
rioxarray = "^0.13.1"
xarray = "^2022.12.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pyproject-autoflake = "^1.0.2"
autoflake = "^2.2.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
